# gameoflife

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  ansi.h  board.c  life.c  life.h
.github/workflows/: cmake.yml
libansi/: CMakeLists.txt  ansi.c
liblife/: CMakeLists.txt  board.c  board.h
libui/: CMakeLists.txt  ui.c  ui.h
tests/: CMakeLists.txt  test.c
